FREEMARKER-188 Cleanup code